Fix broken M3N support
- Update existing DomU config file.
- Add missing DomD config and device tree files.
- Rename "salvator-x-m3n" to "salvator-xs-m3n" everywhere.
- Add empty Display Manager config file.
- Extend logic in weston.bb to handle M3N case.
- Load SATA driver as a module.

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/INSTALL
+++ b/INSTALL
@@ -58,6 +58,7 @@ Hereafter the supported MACHINE_NAMEs are:
 - salvator-xs-h3  (Salvator-XS board with H3 ES2.0 SoC installed)
 - salvator-xs-h3-2x2g (Salvator-XS board with H3 ES3.0 SoC installed)
 - salvator-xs-h3-4x2g (Salvator-XS board with H3 ES3.0 SoC installed)
+- salvator-xs-m3n (Salvator-XS board with M3N SoC installed)
 - h3ulcb (H3ULCB board with H3 ES2.0 SoC installed)
 - m3ulcb (M3ULCB board with M3 SoC installed)
 
