--- a/INSTALL
+++ b/INSTALL
@@ -141,7 +141,7 @@ workspace_base
 │       │   │   └── images
 │       │   │       └── MACHINE_NAME-xt
 │       │   │
-│       │   └── mk_sdcard_image_domu.sh
+│       │   └── mk_sdcard_image.sh
 │       │
 │       └── work
 │           └── x86_64-xt-linux
@@ -259,13 +259,14 @@ Let's consider available boot options in details.
 
 1. Using a storage device.
 In order to boot system using a storage device, required storage device should be prepared
-and flashed beforehand. The mk_sdcard_image_domu.sh script is intended to help with that:
+and flashed beforehand. The mk_sdcard_image.sh script is intended to help with that:
 
-sudo ./mk_sdcard_image_domu.sh -p /IMAGE_FOLDER -d /IMAGE_FILE
+sudo ./mk_sdcard_image.sh -p /IMAGE_FOLDER -d /IMAGE_FILE -c gen3
 
 Where, IMAGE_FOLDER is a path to a folder where artifacts live (in the context of this document
 it is a "deploy" directory) and IMAGE_FILE is an output image file or physical device how
-it is appears in the filesystem (/dev/sdx).
+it is appears in the filesystem (/dev/sdx). As far as script intended to support different products,
+we need to specify '-c gen3' for this product.
 
 1.1 In case of SDx card booting we just have to insert SD card to a Host machine and run a script,
 the latter will do all required actions automatically. All what we need to care about is to write
@@ -281,7 +282,7 @@ and using "dd" command just copy blob to eMMC.
 For example,
 
 prepare an image blob:
-sudo ./mk_sdcard_image_domu.sh -p /IMAGE_FOLDER -d /home/emmc.img
+sudo ./mk_sdcard_image.sh -p /IMAGE_FOLDER -d /home/emmc.img -c gen3
 
 and then run on target:
 dd if=/home/emmc.img of=/dev/mmcblk0
