--- a/INSTALL
+++ b/INSTALL
@@ -1,13 +1,14 @@
 Prerequisites:
 ==============
+0. Ubuntu 16.04 should be used as host OS for build.
 1. Install tools: apt-get install gawk wget diffstat texinfo chrpath socat libsdl1.2-dev \
                     python-crypto repo checkpolicy python-git \
                     python-ctypeslib bzr pigz m4 lftp openjdk-8-jdk git-core \
                     gnupg flex bison gperf build-essential zip curl zlib1g-dev \
                     gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev \
                     x11proto-core-dev libx11-dev lib32z-dev ccache libgl1-mesa-dev \
-                    libxml2-utils xsltproc unzip -y
-2. Google repo: https://source.android.com/source/downloading
+                    libxml2-utils xsltproc unzip python-clang-5.0 -y
+2. Download and install Google repo: https://source.android.com/setup/build/downloading#installing-repo
 3. Checked with Python v 2.7.12, but other should also work
 
 About:
