--- a/INSTALL
+++ b/INSTALL
@@ -89,11 +89,15 @@ ln -s rcar-proprietary-graphic-salvator-x-m3-xt-domu.tar.gz rcar-proprietary-gra
 
 5. Run the build script:
 
-python ./build_prod.py --build-type dailybuild --machine MACHINE_NAME --product PRODUCT_NAME --with-local-conf --config xt-gen3-test.cfg --with-do-build
+python ./build_prod.py --build-type dailybuild --machine MACHINE_NAME --product PRODUCT_NAME --branch RELEASE_NAME --with-local-conf --config xt-gen3-test.cfg --with-do-build
 
 Where the PRODUCT_NAME depends on whether prebuilt EVA proprietary packages are used or not:
 - gen3-test (to use prebuilt EVA proprietary packages)
 - gen3-test-src (to build Graphics DDK from sources)
+
+Where the RELEASE_NAME name is the name of the release to be built.
+This is done in order to track product releases easily and have a possibility to build any release just by pointing a proper release name.
+Please note, if "branch" parameter is not set then the current product's snapshot will be built.
 
 Hereafter the supported MACHINE_NAMEs are:
 - salvator-x-h3  (Salvator-X board with H3 ES2.0 SoC installed)
